# Redeye

./: .gitignore  BoxBody.cpp  BoxBody.h  CMakeLists.txt  Camera.cpp  Camera.h  CollisionObject.cpp  CollisionObject.h  Debug.cpp  Debug.h  Entity.cpp  Entity.h  Error.cpp  Error.h  EventCollider.cpp  EventCollider.h  InputHandler.cpp  InputHandler.h  LICENSE.md  Player.cpp  Player.h  README.md  Scene.cpp  Scene.h  Tilemap.cpp  Tilemap.h  UI.cpp  UI.h  Utils.cpp  Utils.h  main.cpp
.github/workflows/: build.yml
CMake/: FetchDependencies.cmake
Source/Application/Layers/: DeathMenuLayer.cpp  DeathMenuLayer.h  GameLayer.cpp  GameLayer.h  StartMenuLayer.cpp  StartMenuLayer.h  TextAlertLayer.cpp  TextAlertLayer.h
Source/Core/Animation/: EntityAnimation.cpp  EntityAnimation.h  EntityAnimationManager.cpp  EntityAnimationManager.h
Source/Core/Audio/: Audio.cpp  Audio.h  AudioManager.cpp  AudioManager.h  Music.cpp  Music.h  Sound.cpp  Sound.h
Source/Core/Backend/: Application.cpp  Application.h  Layer.h  LayerManager.cpp  LayerManager.h  LayerTypes.cpp  LayerTypes.h  Program.cpp  Program.h
Source/Core/Camera/: Camera.cpp  Camera.h
Source/Core/Entity/: Player.cpp  Player.h
Source/Core/Event/: Event.h  EventBus.h  EventCollider.cpp  EventCollider.h  EventDispatcher.h
Source/Core/Main/: main.cpp
Source/Core/Phys/: BoxBody.cpp  BoxBody.h  CollisionObject.cpp  CollisionObject.h  CollisionSpline.cpp  CollisionSpline.h
Source/Core/Renderer/: Animation.cpp  Animation.h  AnimationManager.cpp  AnimationManager.h  Tilemap.cpp  Tilemap.h  TilemapRenderer.cpp  TilemapRenderer.h
Source/Core/Serialization/: AnimationLoader.cpp  AnimationLoader.h  Save.cpp  Save.h
Source/Core/UI/: RectButton.cpp  RectButton.h  UI.cpp  UI.h
Source/Core/Utility/: Debug.cpp  Debug.h  Enum.cpp  Enum.h  Error.h  Globals.h  Logging.h  Utils.cpp  Utils.h
assets/Map data/: Master Tile Sheet.tsj  Redeye Test Lvl.tiled-session  Redeye Test Lvl.tmj
assets/Map data/Version 2/: Master tile sheet.tsj  Master tile sheet.tsx  TestLvl1.tmj
assets/Map data/Version 3/: Dead trees and foliage.tsj  Ground and trees.tsj  Master Tilesheet.tsj  TestLvl3.tiled-session  TestLvl3.tmj  Trees and ground.tsj
assets/Player assets/: player_anims.toml
assets/Shaders/: lighting.fsh
external_libs/: tileson.hpp
external_libs/Box2D/include/: box2d.h  math_functions.h  types.h
external_libs/Raylib/include/: raygui.h  raymath.h  rlgl.h
external_libs/Toml/: toml.hpp
external_libs/Tson/: tileson.hpp
src/: Audio.cpp  Audio.h  BoxBody.cpp  BoxBody.h  Camera.cpp  Camera.h  CollisionObject.cpp  CollisionObject.h  CommandListener.h  Debug.cpp  Debug.h  Entity.cpp  Error.cpp  Error.h  EventCollider.cpp  EventCollider.h  EventDispatcher.h  InputHandler.cpp  InputHandler.h  Player.cpp  Player.h  Scene.cpp  Scene.h  Tilemap.cpp  Tilemap.h  TilemapRenderer.cpp  TilemapRenderer.h  UI.cpp  UI.h  Utils.cpp  Utils.h  main.cpp
